--- a/src/styles/about/about_styles.css
+++ b/src/styles/about/about_styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English&family=Lato:wght@300&display=swap');
+
 .about-spotlight {
     width: 100%;
     height: 450px;
