--- a/src/styles/home_sections/celestial/celestial_section_styles.css
+++ b/src/styles/home_sections/celestial/celestial_section_styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English&family=Lato:wght@300&display=swap');
+
 #container-cel {
     background-color: black !important;
     color: white !important;
