--- a/src/styles/home_sections/strategy/strategy_section_styles.css
+++ b/src/styles/home_sections/strategy/strategy_section_styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English&family=Lato:wght@300&display=swap');
+
 #container-wt {
     padding: 12em 2em 0em 2em;
     background-image: linear-gradient(white, #b2ccae);
