--- a/src/styles/footer_styles.css
+++ b/src/styles/footer_styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English&family=Lato:wght@300&display=swap');
+
 .footer-container {
     display: grid;
     background-color: aliceblue;
