--- a/src/styles/home_sections/celestial/celestial_section_styles.css
+++ b/src/styles/home_sections/celestial/celestial_section_styles.css
@@ -70,7 +70,7 @@
 
 #cel-school-hover {
     text-decoration: none;
-    color: white !important;
+    color: #fff;
 }
 
 #cel-school-hover:hover, #cel-school-hover:visited:hover {
